# packager

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  PRIVACY.md  README.md  SECURITY.md  THIRD_PARTY_NOTICES.md  package-lock.json  package.json
.github/workflows/: ci.yml  macos-runtime-e2e.yml  package-manager-channels.yml  preview.yml  publish-npm.yml  release-cli.yml  release.yml  runtime-assets.yml  windows-wsl2-e2e.yml
.tauri/: packager.key.pub
Formula/: packager.rb
bucket/: packager.json
crates/packager-cli/: Cargo.toml
crates/packager-cli/src/: main.rs
crates/packager-core/: Cargo.toml
crates/packager-core/src/: builder.rs  icon.rs  lib.rs  managed_runtime.rs  model.rs  runtime.rs  secret_store.rs
docs/: CODE_SIGNING_POLICY.md  MAINTAINER_GUIDE.md  PREVIEW-NOTICE.txt  STATUS.md
docs/evidence/: macos-runtime-e2e-2026-07-14.json
npm/packager-cli/: package.json
npm/packager-cli-darwin-arm64/: package.json
npm/packager-cli-darwin-x64/: package.json
npm/packager-cli-win32-arm64/: package.json
npm/packager-cli-win32-x64/: package.json
schemas/: packager.schema.json
scripts/: check-versions.mjs  configure-github-secrets.sh  configure-preview-build.mjs  configure-release-build.mjs  generate-package-manager-manifests.mjs  macos-runtime-smoke.sh  maintenance-check.sh  prepare-npm-release.mjs  verify-macos-release.sh  verify-windows-release.ps1  windows-wsl2-smoke.ps1
src/: App.css  App.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
tests/fixtures/: windows_runtime_mock.rs
