[package]
name = "packager-core"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Shared engine for packaging and running self-hosted applications"

[dependencies]
flate2 = "1"
reqwest = { version = "0.13", default-features = false, features = ["blocking", "native-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
sha2 = "0.10"
tar = "0.4"
url = "2"
uuid = { version = "1", features = ["v4"] }
zip = { version = "4", default-features = false, features = ["deflate"] }

[target.'cfg(target_os = "windows")'.dependencies]
keyring = { version = "4.1.4", default-features = false, features = ["v1", "windows-native-keyring-store"] }
